fixes bug 252118 "necko ignores settings for max-persistent-connections-per-server" r=biesi sr=bzbarsky